# xiaoyou-exam-system

./: README.md
ExamSystem/: CMakeLists.txt  database.cpp  database.h  main.cpp  mainwindow.cpp  resources.qrc  项目文件目录.txt
ExamSystem/db/: insert_test_datas.sql  lcy_datas.sql  px_datas.sql  table_create.sql  可用测试数据.docx
ExamSystem/db2/: MySQL表信息.txt  insert_test_datas_2.sql  table_create_2.sql  测试数据.txt
ExamSystem/log/: 64位QT下载方法.txt  QT连接MySQL方法.txt  log1.txt  log2.txt  log3.txt  log5.txt  log6.txt  log7.txt  log一代.txt  log部署上云.txt  上云操作记录.docx  产品设计.txt  数据库设计.txt  系统架构图.html
ExamSystem/log2/: 7.2野指针导致闪退bug.txt  v2log1.txt  v2log2.txt  v2log3.txt  v2log4.txt  v2log5.txt  v2log6.txt  v2log7.txt  v2阶段4规划.txt  二代产品设计.txt  二代数据库设计.txt  二代系统架构图.html  二代规划.txt  二代阶段6规划.txt  阶段5结束项目包含文件.txt
ExamSystem/src/: cpp备份.txt  database.cpp作业管理部分.txt  database.cpp好友模块部分.txt  database.cpp学生参与考试部分.txt  database.cpp我的课程部分.txt  h备份.txt
ExamSystem/src/core/: database.cpp  database.h
ExamSystem/src/models/: Question.cpp  Question.h  assignment.cpp  assignment.h  assignmentsubmission.cpp  assignmentsubmission.h  chatinfo.cpp  chatinfo.h  classstatistics.cpp  classstatistics.h  course.cpp  course.h  courseassignment.cpp  courseassignment.h  coursenotice.cpp  coursenotice.h  enrollmentrequest.cpp  enrollmentrequest.h  erollmentrequest.cpp  exam.cpp  exam.h  friendinfo.cpp  friendinfo.h  friendrequest.cpp  friendrequest.h  groupinfo.cpp  groupinfo.h  groupmember.cpp  groupmember.h  grouprequest.cpp  grouprequest.h  messageinfo.cpp  messageinfo.h  student.cpp  student.h  studentanswer.cpp  studentanswer.h  submission.cpp  submission.h  teacher.cpp  (+5 more)
ExamSystem/src/ui/auth/: loginwindow.cpp  loginwindow.h  registerwindow.cpp  registerwindow.h
ExamSystem/src/ui/chat/: chatpage.cpp  chatpage.h  creategroupdialog.cpp  creategroupdialog.h  groupdetailwidget.cpp  groupdetailwidget.h  groupinfodialog.cpp  groupinfodialog.h  grouplistwidget.cpp  grouplistwidget.h  groupmanagewidget.cpp  groupmanagewidget.h  invitememberdialog.cpp  invitememberdialog.h  joingroupdialog.cpp  joingroupdialog.h  messagebubblewidget.cpp  messagebubblewidget.h
ExamSystem/src/ui/course/: assignmentwidget.cpp  assignmentwidget.h  courseassignmentwidget.cpp  courseassignmentwidget.h  coursenoticewidget.cpp  coursenoticewidget.h  coursepage.cpp  coursepage.h  enrollmentadminwidget.cpp  enrollmentadminwidget.h  enrollmentwidget.cpp  enrollmentwidget.h  mycourseswidget.cpp  mycourseswidget.h  noticedetailwidget.cpp  noticewidget.cpp  noticewidget.h
ExamSystem/src/ui/friend/: friendmanager.cpp  friendmanager.h  friendpage.cpp  friendpage.h
ExamSystem/src/ui/main/: studentmainwindow.cpp  studentmainwindow.h  teachermainwindow.cpp  teachermainwindow.h
ExamSystem/src/ui/student/: examresult.cpp  examresult.h  examtaking.cpp  examtaking.h  studentexamlist.cpp  studentexamlist.h
ExamSystem/src/ui/teacher/exams/: examdialog.cpp  examdialog.h  exammanager.cpp  exammanager.h  examstatusmanager.cpp  examstatusmanager.h  papercomposer.cpp  papercomposer.h  paperpreview.cpp  paperpreview.h  permissiondialog.cpp  permissiondialog.h
ExamSystem/src/ui/teacher/grading/: examgrading.cpp  examgrading.h
ExamSystem/src/ui/teacher/questions/: questiondialog.cpp  questiondialog.h  questionmanager.cpp  questionmanager.h
ExamSystem/src/ui/teacher/statistics/: classstatisticswindow.cpp  classstatisticswindow.h
log/: log1.txt  log4.txt  规划.txt
开发设计文档/: README.md
开发设计文档/01.需求说明书/: 第一小组需求说明书 .docx
开发设计文档/02.设计说明书/: 01story拆分 .xlsx  01story拆分.xlsx  华中师范大学-计科2301班01组_数据库设计文档 .docx  华中师范大学-计科2301班01组_数据库设计文档.docx  第一小组设计说明书 .docx
开发设计文档/03.测试用例/: 01组测试用例.xlsx
开发设计文档/04.问题列表/: 01组实习实训情况完成度记录表.xls
开发设计文档/08.计划书/: 01组项目计划.xlsx
开发设计文档/开发设计文档/01.需求说明书/: 第一小组需求说明书 .docx
开发设计文档/开发设计文档/02.设计说明书/: 01story拆分 .xlsx
开发设计文档/开发设计文档/03.测试用例/: 01组测试用例.xlsx
开发设计文档/开发设计文档/04.问题列表/: 问题单列表.xlsx
开发设计文档/开发设计文档/05.用户手册/: 用户手册.docx
开发设计文档/开发设计文档/每日站会记录/: 华中师范大学-计科2301班01组2025年6月27日会议纪要.docx  华中师范大学-计科2301班01组2025年6月28日会议纪要.docx  华中师范大学-计科2301班01组2025年6月30日会议纪要.docx  华中师范大学-计科2301班01组2025年7月2日会议纪要.docx
